Java17よりも前のバージョンに対応